<resources>
    <string name="app_name">Privacy QR and Barcode Scanner</string>
    <string name="scan_hint">Point camera at a QR code</string>
    <string name="scanned_result">Scanned Result</string>
    <string name="copy">Copy</string>
    <string name="share">Share</string>
    <string name="scan_again">Scan Again</string>
    <string name="open">Open</string>
    <string name="tile_label">Scan QR Code</string>
    <string name="tile_subtitle">Tap to scan</string>
</resources>